# cict_ocr

./: LICENSE  README.md  setup.cfg
gradio/: tempCodeRunnerFile.py
