[metadata]
name = cict_ocr
version = 0.0.1
author = Tamil Adhavan
author_email = sk.tamiladhavan@gmail.com
description = Python OCR for Tamil Manuscripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adhavan18/cict_ocr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.9
include_package_data = True